--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -6,16 +6,16 @@ Introduction to linear regression models. We will also begin to compare k-nn to 
 ## Chapter learning objectives 
 By the end of the chapter, students will be able to:
 
-* In a dataset with 2 variables, perform simple ordinary least squares regression in R using `caret`'s `train` with `method = "lm"` to predict the values for a test dataset.
+* Perform ordinary least squares regression in R using `caret`'s `train` with `method = "lm"` to predict the values for a test dataset.
 * Compare and contrast predictions obtained from k-nearest neighbour regression to those obtained using simple ordinary least squares regression from the same dataset.
 * In R, overlay the ordinary least squares regression lines from `geom_smooth` on a single plot. 
 
-## Linear regression
-k-nn is not the only type of regression, there are many, and one common and quite useful type of regression is called linear regression. Linear regression is similar to k-nn regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value.
+## Simple linear regression
+k-nn is not the only type of regression, there are many, and one common and quite useful type of regression is called simple linear regression. Simple linear regression is similar to k-nn regression in that the target/response variable is expected to be quantitative, however, one way it varies quite differently is how the training data is used to predict a value for a new observation. Instead of looking at the $k$-nearest neighbours and averaging over their values for a prediction, in simple linear regression all the training data points are used to create a straight line of "best fit", and then the line is used to "look-up" the predicted value. *Note - for simple linear regression there is only one response variable and only one predictor. Later in this chapter we introduce the more general linear regression case where more than one predictor can be used.* 
 
 For example, let's revisit the smaller version of the Sacramento housing data set and the prediction case where we come across a new house we are interested in purchasing, and it is 2000 square feet! Its advertised list price is $350,000 should we give them what they are asking? Or is that overpriced and we should offer less? 
 
-To answer this question using linear regression, we use the data we have to draw the straight line of "best fit" through our existing data points:
+To answer this question using simple linear regression, we use the data we have to draw the straight line of "best fit" through our existing data points:
 
 ```{r 08-lin-reg1, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 4, fig.width = 5}
 library(tidyverse)
@@ -24,7 +24,7 @@ library(caret)
 library(gridExtra)
 
 data(Sacramento)
-set.seed(2019)
+set.seed(1234)
 small_sacramento <- sample_n(Sacramento, size = 30)
 
 small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
@@ -50,7 +50,7 @@ small_plot +
 print(prediction[[1]])
 ```
 
-Using linear regression on this small data set to predict the sale price for a 2000 square foot house we get a predicted value of \$287178.80 USD. But wait a minute... How exactly does linear regression choose the line of "best fit"? Many different lines could be drawn through the data points, we show some examples below:
+Using simple linear regression on this small data set to predict the sale price for a 2000 square foot house we get a predicted value of \$`r format(round(prediction[[1]]), scientific = FALSE)`. But wait a minute... How exactly does simple linear regression choose the line of "best fit"? Many different lines could be drawn through the data points, we show some examples below:
 
 ```{r 08-several-lines, echo = FALSE, fig.height = 4, fig.width = 5}
 
@@ -60,7 +60,7 @@ small_plot +
   geom_abline(intercept = -64542.23, slope = 160, color = "red") 
 ```
 
-Linear regression chooses the straight line of "best fit" by choosing the line that minimzes the **average** vertical distance between itself and each of the observed data points. From the lines shown above, that is the blue line. What exactly do we mean by the vertical distance between the predicted values (which fall along the line of "best fit") and the observed data points? We illustrate these distances in the plot below with a red line:
+Simple linear regression chooses the straight line of "best fit" by choosing the line that minimzes the **average** vertical distance between itself and each of the observed data points. From the lines shown above, that is the blue line. What exactly do we mean by the vertical distance between the predicted values (which fall along the line of "best fit") and the observed data points? We illustrate these distances in the plot below with a red line:
 
 ```{r 08-verticalDistToMin,  echo = FALSE, fig.height = 4, fig.width = 5}
 small_sacramento <- small_sacramento %>% 
@@ -71,11 +71,11 @@ small_plot +
 
 ```
 
-How do we assess the predictive accuracy of a linear regression model? We use the same measure of predictive performance we used with k-nn regression, $RMPSE$ (note the use of $RMPSE$ versus $RMSE$ here as discussed in the first section of this chapter).
+How do we assess the predictive accuracy of a simple linear regression model? We use the same measure of predictive performance we used with k-nn regression, $RMPSE$.
 
 ## Linear regression in R using `caret`
 
-We can perform linear regression in R using the `caret` package in a very similar manner to how we performed k-nn regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a linear regression approach using the full Sacramento real estate data set:
+We can perform simple linear regression in R using the `caret` package in a very similar manner to how we performed k-nn regression, using the `train` function. To do this, instead of setting `method = "knn"` we instead set `method = "lm"`. Another difference is that we do not need to choose $k$ in the context of linear regression and so we do not need to perform cross validation. Below we illustrate how we can use the `caret` package to predict house sale price given house size using a simple linear regression approach using the full Sacramento real estate data set:
 
 As usual, we should start by putting some test data away in a lock box that we can come back to after we choose our final model, so let's take care of that business now. 
 
@@ -108,7 +108,7 @@ Y_test <- Sacramento %>%
 ```
 
 
-Now that we have our training data, we fit our linear regression model:
+Now that we have our training data, we fit our simple linear regression model:
 
 ```{r 08-fitLM, fig.height = 4, fig.width = 5}
 lm_model <- train(x = X_train, 
@@ -125,9 +125,9 @@ lm_test_results <- defaultSummary(lm_modelvalues)
 lm_test_results
 ```
 
-Our final model's test error as assessed by $RMSPE$ is 86688.47. Remember that this is in units of the target/response variable, and here that is US Dollars (USD). Does this mean our model is "good" at predicting house sale price based off of the predictor of home size? Again answering this is tricky to answer and requires to use domain knowledge and think about the application you are using the prediction for. 
+Our final model's test error as assessed by $RMSPE$ is `r format(lm_test_results[[1]], scientific = FALSE)`. Remember that this is in units of the target/response variable, and here that is US Dollars (USD). Does this mean our model is "good" at predicting house sale price based off of the predictor of home size? Again answering this is tricky to answer and requires to use domain knowledge and think about the application you are using the prediction for. 
 
-And what does our final linear regression model look like when we predict across all possible house sizes we might encounter in the Sacremento area? There is a plotting function in the `tidyverse`, `geom_smooth`, that allows us to do this easily by adding a layer on our plot with the linear regression predicted line of "best fit". The default for this adds a plausible range to this line that we are not interested in at this point, so to avoid plotting it, we provide the argument `se = FALSE` in our call to `geom_smooth`.
+And what does our final simple linear regression model look like when we predict across all possible house sizes we might encounter in the Sacremento area? There is a plotting function in the `tidyverse`, `geom_smooth`, that allows us to do this easily by adding a layer on our plot with the simple linear regression predicted line of "best fit". The default for this adds a plausible range to this line that we are not interested in at this point, so to avoid plotting it, we provide the argument `se = FALSE` in our call to `geom_smooth`.
 
 ```{r 08-lm-predict-all, fig.height = 4, fig.width = 5}
 
@@ -142,12 +142,12 @@ lm_plot_final <- ggplot(train_data, aes(x = sqft, y = price)) +
 lm_plot_final
 ```
 
-## Comparing linear and k-nn regression
+## Comparing simple linear and k-nn regression
 
-Now that we have a general understanding of both linear and k-nn regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, let's look at the visualization of the linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" k-nn regression model obtained from the same problem:
+Now that we have a general understanding of both simple linear and k-nn regression, we can start to compare and contrast these methods as well as the predictions made by them. To start, let's look at the visualization of the simple linear regression model predictions for the Sacramento real estate data (predicting price from house size) and the "best" k-nn regression model obtained from the same problem:
 
 ```{r 08-compareRegression, echo = FALSE, fig.height = 4, fig.width = 10}
-k = data.frame(k = 51)
+k = data.frame(k = 41)
 set.seed(1234)
 knn_reg_final <- train(x = X_train, y = Y_train, method = "knn", tuneGrid = k)
 set.seed(1234)
@@ -162,7 +162,7 @@ plot_final <- ggplot(train_data, aes(x = sqft, y = price)) +
     scale_y_continuous(labels = dollar_format())  +
     geom_line(data = predictions_all, aes(x = sqft, y = price), color = "blue") +
     ggtitle("k-nn regression") +
-    annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", "91620.40"))
+    annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", "87120.62"))
 
 lm_plot_final <- lm_plot_final +
   annotate("text", x = 3500, y = 100000, label = paste("RMSPE =", round(lm_test_results[[1]], 2))) +
@@ -171,7 +171,7 @@ lm_plot_final <- lm_plot_final +
 grid.arrange(lm_plot_final, plot_final, ncol = 2)
 ```
 
-What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In linear regression we are restricted to a straight line, whereas in k-nn regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. Additionally, because our model is restricted to a straight line, we can even use the mathematical equation for a straight line as a basis to write a mathematical expression of our model. 
+What differences do we observe from the visualization above? One obvious difference is the shape of the blue lines. In simple linear regression we are restricted to a straight line, whereas in k-nn regression our line is much more flexible and can be quite wiggly. There can be an advantage to limiting the model to a straight line, as simple linear regression does, in that a straight line model is quite interpretable and can be defined by two numbers, the y-intercept and the slope. The slope is particularly meaningful for interpretation, as it tells us what unit increase in the target/response variable we predict given a unit increase in the predictor/explanatory variable. Additionally, because our model is restricted to a straight line, we can even use the mathematical equation for a straight line as a basis to write a mathematical expression of our model. 
 
 Remembering that the equation for a straight line is: 
 
@@ -185,20 +185,28 @@ We can then write:
 
 $$house\: price = \beta_0 + \beta_1house\: size$$
 
-And finally, fill in the values for $\beta_0$ and $\beta_1$ from the straight line (we will show you how to get these from R next week) to get:
+And finally, fill in the values for $\beta_0$ and $\beta_1$ from the straight line. We can get these values from our model by accessing the `finalModel$coefficients` attribute of our simple linear regression model object `lm_model`:
 
-$$house\: price = -64542.2 + 175.9*house\: size$$
+```{r 09-lm-get-coeffs}
+lm_model$finalModel$coefficients
+```
+
+Which we can then plug into the equation:
+
+$$house\: price = `r format(lm_model$finalModel$coefficients[[1]], scientific = FALSE)` + `r round(lm_model$finalModel$coefficients[[2]])`*house\: size$$
 
 k-nn regression, as simple as it is to implement and understand, has no such interpretability from it's wiggly line.
 
-There can however also be a disadvantage to using a linear regression model in some cases, particularly when the relationship between the target and the predictor is not linear, but instead some other shape, such as curved or circular. In these cases the prediction model from a linear regression will have high bias, meaning that model/predicted values does not match the actual observed values very well. Such a model would probably have a quite high $RMSE$ when assessing model goodness of fit on the training data and a quite high $RMPSE$ when assessing model prediction quality on a test data set. On such a data set, k-nn regression may fare better. Additionally, there are other types of regression you can learn about in future courses that may do even better at predicting with such data.
+There can however also be a disadvantage to using a simple linear regression model in some cases, particularly when the relationship between the target and the predictor is not linear, but instead some other shape, such as curved or circular. In these cases the prediction model from a simple linear regression will underfit (have high bias), meaning that model/predicted values does not match the actual observed values very well. Such a model would probably have a quite high $RMSE$ when assessing model goodness of fit on the training data and a quite high $RMPSE$ when assessing model prediction quality on a test data set. On such a data set, k-nn regression may fare better. Additionally, there are other types of regression you can learn about in future courses that may do even better at predicting with such data.
 
-How do these two models compare on this data set? On the visualizations above we also printed the $RMPSE$ as calculated from predicting on the test data set that was not used to train/fit the models. The $RMPSE$ for the linear regression model is less than the $RMPSE$ for the k-nn regression model, and thus if were were comparing these in practice we would choose to use the linear regression model to make our predictions because of this (in addition to the fact the the linear regression model is more interpretable). 
+How do these two models compare on this data set? On the visualizations above we also printed the $RMPSE$ as calculated from predicting on the test data set that was not used to train/fit the models. The $RMPSE$ for the simple linear regression model is less than the $RMPSE$ for the k-nn regression model, and thus if were were comparing these in practice we would choose to use the simple linear regression model to make our predictions because of this (in addition to the fact the the simple linear regression model is more interpretable). 
 
 
 ## Multivariate linear regression
 
-As in k-nn classification and k-nn regression, in linear regression we can have multiple predictors. To do this, we follow a very similar approach to what we did using `caret` for k-nn regression, however, we do not need to use cross-validation to choose $k$. We also do not need to scale the data for linear regression as it does not use a distance between points calculation in its algorithm. We demonstrate how to do this below using the Sacramento real estate data with both house size (measured in square feet) as well as number of bathrooms as our predictors, and continue to use house sale price as our outcome/target variable that we are trying to predict.
+As in k-nn classification and k-nn regression, we can move beyond the simple case of one response variable and only one predictor and perform multivariate linear regression where we can have multiple predictors. In this case we fit a plane to the data, as opposed to a straight line.
+
+To do this, we follow a very similar approach to what we did using `caret` for k-nn regression, however, we do not need to use cross-validation to choose $k$. We also do not need to scale the data for linear regression as it does not use a distance between points calculation in its algorithm. We demonstrate how to do this below using the Sacramento real estate data with both house size (measured in square feet) as well as number of bathrooms as our predictors, and continue to use house sale price as our outcome/target variable that we are trying to predict.
 
 We will start by splitting our data into a trained and test set as we did before:
 
@@ -310,7 +318,7 @@ $$house\: price = \beta_0 + \beta_1  \:house\: size + \beta_2  \:number\: of \: 
 
 And finally, fill in the values for $\beta_0$, $\beta_1$ and $\beta_2$ from the model output above:
 
-$$house\: price = 25284.3344 + 140.2523*house\: size -7115.9565 *  \:number\: of \: bathrooms$$
+$$house\: price = `r format(lm_mult_reg_final$finalModel$coefficients[[1]], scientific = FALSE)` + `r format(round(lm_mult_reg_final$finalModel$coefficients[[2]]), scientific = FALSE)`*house\: size + `r format(round(lm_mult_reg_final$finalModel$coefficients[[3]]), scientific = FALSE)` *  \:number\: of \: bathrooms$$
 
 OK great, so this model is more interpretable than the multivariate k-nn regression model (i.e., we can write a mathematical equation that explains how each predictor is affecting the predictions), but as always, we should look at the test error and ask whether linear regression is doing a better job of predicting compared to k-nn regression in this multivariate regression case? To do that we can use this linear regression model to predict on the test data to get our test error.
 
@@ -321,27 +329,13 @@ lm_mult_test_results <- defaultSummary(lm_modelvalues)
 lm_mult_test_results[[1]]
 ```
 
-We get that the $RMSPE$ for the multivariate linear regression model of 86778.87. This prediction error is less than the prediction error for the multivariate k-nn regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last chapter, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was 86688.47 which is less than that for our more complex model. Thus, again for interpretability sake as well as performance, we should in the end choose the simple linear regression model for this data set. 
+We get that the $RMSPE$ for the multivariate linear regression model of `r format(lm_mult_test_results[[1]], scientific = FALSE)`. This prediction error is less than the prediction error for the multivariate k-nn regression model, indicating that we should likely choose linear regression for predictions of house price on this data set. But wait, we should also ask if this more complex model is doing a better job of predicting compared to our simple linear regression model with only a single predictor (house size). Revisiting last chapter, we see that our $RMSPE$ for our simple linear regression model with only a single predictor was 86688.47 which is less than that for our more complex model. Thus, again for interpretability sake as well as performance, we should in the end choose the simple linear regression model for this data set. 
 
 Should we always end up choosing a simple linear regression as our model? No! And you never know what model will be the best until you go through this process. Exploratory data analysis can give you some hints, but until you look at the test error to compare the models you don't really know.
 
 ## The other side of regression
 
-So far in this textbook we have used regression only in the context of prediction, however, regression is also a powerful method to understand and/or describe the relationship between a quantitative outcome/response variable and one or more explanatory variables. Extending the case we have been working with in this chapter (where we are interested in house price as the outcome/response variable), we could also, or instead, be interested in describing the individual effects of house size and the number of bathrooms on house price, quantifying how big each of these effects are, and assessing how accurately we can estimate each of these effects.
-
-Using linear regression to answer such questions sits under the umbrella of statistical inference. Here we will only introduce this topic at a very high-level, but it is an important field that is widely used in Statistics and Data Science and is taught in many Statistical courses. 
-
-In statistical inference we acknowledge that we can only measure some of all the possible observations that exist in the world for the thing we are interested in quantifying. And so what we do, is use the measurements that we do have to infer/make a guess about what the true quantity would be if we could measure every possible thing. One example of statistical inference would be to try to estimate/come up with a best guess to the proportion of undergraduates who have an iphone. 
-
-<img src="img/sampling.001.jpeg" width="600">
-
-We cannot possibly ask all existing undergraduates if they have an iphone, so what can we do? Well, what statistical inference suggests that instead of asking all undergraduates (which we cannot do), we instead ask a random (and representative) sample of undergraduates if they have an iphone. 
-
-<img src="img/sampling.002.jpeg" width="600">
-
-From this sample of data we calculate the proportion of undergraduates that have an iphone. We can then use this proportion as an estimate/best guess of the proportion of all undergradautes that have an iphone. We know the proportion we calculated is not exactly right, but we think it should be close and it's the best we can do (since we cannot possibly ask all undergraduates and get the exact truth). Since we know that it's not exaclty right, we also try to use the data we have collected to come up with a plausible range where we think the true proportion of all undergradautes that have an iphone lies. 
-
-Now here in this chapter in the context of linear regression, we are not talking about estimating a proportion, instead we are instead usually interested in estimating the slope/coefficient of the relationship between the outcome/response variable and one or more predictor variables. Again, in this case, whatever we are measuring is usually just a sample of all the things we could measure. Here in this chapter it is a sample of observations measuring the sale and house characteristics of 932 (out of > 180,000) homes in Sacramento. Fitting our linear model, we did come up with an estimate for the slope for the relationship between house sale price and home size as 175.9. We know this number is not the true slope for the relationship between these two variables, however this is the best guess/estimate we can come up with given the data that we have. The next step of regression in this statistical inference perspective would be to use the data we have come up with a plausible range for where we think the value for the true slope would lie. We will not go into the details of how to do this in this course, but this will be covered in following Statistics courses. However, if you are very interested we will say that boostrapping to generate confidence intervals would be one approach that would let you do this and we point you to the additional readings for this chapter to learn more if you are interested. 
+So far in this textbook we have used regression only in the context of prediction, however, regression is also a powerful method to understand and/or describe the relationship between a quantitative outcome/response variable and one or more explanatory variables. Extending the case we have been working with in this chapter (where we are interested in house price as the outcome/response variable), we could also, or instead, be interested in describing the individual effects of house size and the number of bathrooms on house price, quantifying how big each of these effects are, and assessing how accurately we can estimate each of these effects. This side of regression is the topic of many follow-on statistics courses and beyond the scope of this course.
 
 ## Additional readings/resources
 - Pages 59-71 of [Introduction to Statistical Learning](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) with Applications in R by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
